sample-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ocp-ftw
  namespace: kube-system
spec:
  rules:
  - host: helloworld.int.shifti.us
    http:
      paths:
      - path: /
        backend:
          serviceName: ocp-ftw
          servicePort: 8080
